--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "export NODE_OPTIONS=--openssl-legacy-provider; nuxt generate",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js"
