--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
+  "engines": {
+    "node": "16"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
