--- a/package.json
+++ b/package.json
@@ -1,37 +1,21 @@
 {
   "name": "bharatkashyap.github.io",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js"
+    "generate": "nuxt generate"
   },
-  "dependencies": {
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
-  },
-  "engines": {
-    "node": "16"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@nuxtjs/eslint-config": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/fontawesome": "^1.1.2",
-    "@nuxtjs/tailwindcss": "^4.2.0",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "postcss": "^8.3.5",
-    "prettier": "^2.3.2",
-    "push-dir": "^0.4.1"
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@nuxt/devtools": "latest",
+    "nuxt": "latest",
+    "vue": "latest",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@nuxtjs/tailwindcss": "^6.11.2"
   }
 }
